--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
             <version>3.0.11.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.4</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
